# xiangqi-chinese-chess-online-platform

./: .dockerignore  .env  .env.local  Dockerfile  FILE_MAPPING.md  IMPLEMENTATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  auth.ts  design.txt  docker-compose.yml  indes.ts  jest.config.js  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
scripts/: copy-wasm.js
src/: Error.module.css  Games.module.css  Leaderboard.module.css  Loading.module.css  Lobby.module.css  RightPanel.module.css
src/__tests__/: mockData.test.ts
src/actions/: gameActions.ts
src/app/: global-error.tsx  globals.css  layout.jsx  layout.tsx  page.module.css  page.tsx  providers.tsx  test.tsx
src/components/: ChineseChess.jsx  ErrorModal.tsx  GameNotFoundModal.tsx  LeftPanel.jsx  LoadingSpinner.tsx  NewGameModal.tsx  PlayModal.tsx  ProtectedRoute.tsx  RightPanel.jsx  WinModal.tsx  XiangqiBoard.jsx  XiangqiBoard.tsx  auth-provider.tsx  navbar.tsx  protected-route.tsx
src/context/: ChatContext.tsx  ErrorContext.tsx  GameContext.tsx
src/hooks/: useClickOutside.ts  useComputerPlayer.ts  useGameState.ts  useGameState.tsx  useGameTimer.js
src/lib/: engine-handler.ts  rate-limit.ts  user-service.ts  zod.ts
src/mock/: chatMessages.json  gameState.json  guests.json  mockData.ts  players.json  (+1 more)
ucci-interpreter/: package-lock.json  package.json
xiangqi-backend/: package-lock.json  package.json
xiangqi-frontend/: README.md  package-lock.json  package.json
xiangqi-wasm/: Cargo.toml
xiangqi-wasm/src/: lib.rs
(+220 files in other folders)
